[package]
name = "ampersand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afire = "2.2.0"
anyhow = "1.0.75"
docker-api = "0.14.0"
futures = "0.3.28"
parking_lot = "0.12.1"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
